Make sure the tip is always visible when the loading screen is removed

--- a/customize.dist/main.css
+++ b/customize.dist/main.css
@@ -397,6 +397,7 @@
   font-family: lato, Helvetica, sans-serif;
   padding: 15px;
   max-width: 60%;
+  display: inline-block;
 }
 /* The container <div> - needed to position the dropdown content */
 .dropdown-bar {
