--- a/customize.dist/src/less/loading.less
+++ b/customize.dist/src/less/loading.less
@@ -45,5 +45,6 @@
         font-family: lato, Helvetica, sans-serif;
         padding: 15px;
         max-width: 60%;
+        display: inline-block;
     }
 }
